# llm-activity-game

./: .gitattributes  .gitignore  FEATURES.md  README.md  pyproject.toml  pytest.ini
assets/: README.md
contracts/: README.md
docs/: gamification-overview.md
game-client/: .gitignore  README.md  project.godot
game-client/autoloads/: GameAPI.gd  GameAPI.gd.uid  NotificationBus.gd  NotificationBus.gd.uid
game-client/scenes/: Achievements.gd  Achievements.gd.uid  Achievements.tscn  Calendar.gd  Calendar.gd.uid  Calendar.tscn  Catalogue.gd  Catalogue.gd.uid  Catalogue.tscn  ChallengeHistory.gd  ChallengeHistory.gd.uid  ChallengeHistory.tscn  ChallengeLeaderboard.gd  ChallengeLeaderboard.gd.uid  ChallengeLeaderboard.tscn  Challenges.gd  Challenges.gd.uid  Challenges.tscn  Collection.gd  Collection.gd.uid  Collection.tscn  DailyChart.gd  DailyChart.gd.uid  DailyChart.tscn  DropOdds.gd  DropOdds.gd.uid  DropOdds.tscn  Events.gd  Events.gd.uid  Events.tscn  Feed.gd  Feed.gd.uid  Feed.tscn  FriendCompare.gd  FriendCompare.gd.uid  FriendCompare.tscn  Goals.gd  Goals.gd.uid  Goals.tscn  Heatmap.gd  (+60 more)
game-client/tests/: TestNotificationBus.gd  TestNotificationBus.gd.uid  TestNotificationBus.tscn  TestRarityColor.gd  TestRarityColor.gd.uid  TestRarityColor.tscn
game-client/utils/: RarityColor.gd  RarityColor.gd.uid
services/: README.md
services/api/: main.py
services/contracts/: chunk.py
services/drop_engine/: lottery.py  strategies.py
services/models/: character.py  enums.py  item.py  place.py  player.py
steam/: README.md
storage/: README.md  schema.sql
(+194 files in other folders)
