[project]
name = "llm-activity-game-services"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[tool.setuptools.packages.find]
include = ["services*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["services/tests"]
